--- a/wally.toml
+++ b/wally.toml
@@ -1,10 +1,19 @@
 [package]
-name = "yohei_yayoi/resulty"
+name = "yoheiyayoi/resulty"
 description = "⚡ Type-safe error handling for Luau"
 version = "1.0.0"
 license = "MIT"
 authors = ["yohei_yayoi"]
-registry = "https://github.com/UpliftGames/wally-index"
+registry = "https://github.com/yoheiyayoi/Resulty/"
 realm = "shared"
+include = [
+    "src",
+    "src/**",
+    "default.project.json",
+    "wally.toml",
+    "wally.lock",
+    "default.project.json",
+    "LICENSE.md",
+]
 
 [dev-dependencies]
